Inclusão do CSS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tadeu Garcia</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 class="code-line" data-line-start=0 data-line-end=1 ><a id="Tadeu_Garcia_0"></a>Tadeu Garcia</h1>
