organização dos arquivos

--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tadeu Garcia</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1 class="code-line" data-line-start=0 data-line-end=1 ><a id="Tadeu_Garcia_0"></a>Tadeu Garcia</h1>
-    <p class="has-line-data" data-line-start="1" data-line-end="2"><strong>Product Designer based in Rio de Janeiro, Brazil</strong></p>
-    <p class="has-line-data" data-line-start="3" data-line-end="4">Currently, I’m part of the <a href="https://www.linkedin.com/company/maisaedu/mycompany/">+A Educação</a> payments team, where I’ve been participating in projects from the discovery phase to delivery, working with user-centered design principles, universal design and design thinking. In addition, I already had the opportunity to work in other teams, such as e-commerce, which allowed me to expand my experience in digital products for education.I always try to establish effective and transparent communication with all areas involved in a project, especially with developers. This allows me to ensure that the process is fluid and that everyone is on the same page, resulting in well-built products.</p>
-    <p class="has-line-data" data-line-start="5" data-line-end="6">Work permit: I’m Brazilian and currently residing in Rio de Janeiro. I’m in the process of acquiring Spanish citizenship, which will be completed by the end of 2024.</p>
-    <h2 class="code-line" data-line-start=7 data-line-end=8 ><a id="Recent_projects_7"></a>Recent projects</h2>
-    <p class="has-line-data" data-line-start="8" data-line-end="9">Get to know some of the recent projects in which I had a relevant role.</p>
-    <h2 class="code-line" data-line-start=10 data-line-end=11 ><a id="More_about_me_10"></a>More about me</h2>
-    <p class="has-line-data" data-line-start="12" data-line-end="13">Sports, meditation, and tea are my daily rituals, fueling my creativity to craft exceptional user experiences. And to complete the checklist of a hipster designer, I’m also a vegetarian.</p>
-    <p class="has-line-data" data-line-start="14" data-line-end="15">In 2007, I started participating in <strong>signature tournaments on forums</strong>. Shortly after starting college for design, I began working in digital marketing agencies, then in a consultancy where I engaged in various projects, including a major project for the Brazilian Federation of Banks. I’ve actively contributed to crafting engaging websites and apps. Proficient in design and interactive prototyping, I’ve led two app projects, focusing on Material Design principles and web interface standards.</p>
-    <p class="has-line-data" data-line-start="16" data-line-end="17">In recent years, I’ve <strong>expanded my skill set</strong> to include <strong>moderating interviews, crafting user journeys, and navigating various product frameworks</strong>. My strong interpersonal skills enable me to cultivate close relationships within my team and remain readily available to provide support.</p>
-    <h2 class="code-line" data-line-start=18 data-line-end=19 ><a id="Designer_who_codes_18"></a>Designer who codes</h2>
-    <p class="has-line-data" data-line-start="20" data-line-end="21">What sets me apart is my genuine <strong>curiosity about the inner workings of interfaces</strong> and my commitment to delivering exceptional user experiences.</p>
-    <p class="has-line-data" data-line-start="22" data-line-end="23">In my previous role, I focused on building the front-end, handing it over to the developers to work on the back end. This, along with starting my career as an art director, has given me a strong UI skill set today.</p>
-    <p class="has-line-data" data-line-start="24" data-line-end="25">One of the directors there, who was also a <strong>developer and visually impaired, taught me many things about accessibility</strong>. From best practices to using screen readers alongside him, it was an incredible learning experience for me.</p>
-    <h2 class="code-line" data-line-start=26 data-line-end=27 ><a id="You_can_find_me_over_here_26"></a>You can find me over here</h2>
-    <ul>
-    <li class="has-line-data" data-line-start="28" data-line-end="29"><a href="https://www.linkedin.com/in/garciatadeu/">LinkedIn</a></li>
-    <li class="has-line-data" data-line-start="29" data-line-end="30"><a href="mailto:tadeugarcia.92@gmail.com">Mail</a></li>
-    <li class="has-line-data" data-line-start="30" data-line-end="31"><a href="tel:5521979976655">Phone</a></li>
-    </ul>
-</body>
-</html>
+
+		<head>
+			<style type="text/css" media="screen">
+				body,html{font-family:var(--markdown-font-family, -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI", system-ui, "Ubuntu", "Droid Sans", sans-serif);font-size:var(--markdown-font-size,14px);padding:0 26px;line-height:var(--markdown-line-height,22px);word-wrap:break-word}body{padding-top:1em}h1,h2,h3,h4,h5,h6,ol,p,pre,ul{margin-top:0}h2,h3,h4,h5,h6{font-weight:400;margin-bottom:.2em}img{max-width:100%;max-height:100%}a{text-decoration:none}a:hover{text-decoration:underline}a:focus,input:focus,select:focus,textarea:focus{outline:1px solid -webkit-focus-ring-color;outline-offset:-1px}p{margin-bottom:.7em}ol,ul{margin-bottom:.7em}hr{border:0;height:2px;border-bottom:2px solid}h1{padding-bottom:.3em;line-height:1.2;border-bottom-width:1px;border-bottom-style:solid;font-weight:400}table{border-collapse:collapse}th{text-align:left;border-bottom:1px solid}td,th{padding:5px 10px}table>tbody>tr+tr>td{border-top:1px solid}blockquote{margin:0 7px 0 5px;padding:0 16px 0 10px;border-left-width:5px;border-left-style:solid}code{font-family:var(--vscode-editor-font-family, "SF Mono", Monaco, Menlo, Consolas, "Ubuntu Mono", "Liberation Mono", "DejaVu Sans Mono", "Courier New", monospace);font-size:1em;line-height:1.357em}body.wordWrap pre{white-space:pre-wrap}pre.hljs code>div,pre:not(.hljs){padding:16px;border-radius:3px;overflow:auto}pre code{color:var(--vscode-editor-foreground);tab-size:4}
+			</style>
+		</head>
+		<body>
+			<link rel="stylesheet" href="caminho/para/seu/arquivo.css">
+
+<p><strong>Tadeu Garcia</strong></p>
+<h1 id="product-designer-based-in-rio-de-janeiro-brazil">Product Designer based in Rio de Janeiro, Brazil</h1>
+<p>Currently, I&#39;m part of the <a href="https://www.linkedin.com/company/maisaedu/mycompany/">+A Educação</a> payments team, where I&#39;ve been participating in projects from the discovery phase to delivery, working with user-centered design principles, universal design and design thinking. In addition, I already had the opportunity to work in other teams, such as e-commerce, which allowed me to expand my experience in digital products for education.I always try to establish effective and transparent communication with all areas involved in a project, especially with developers. This allows me to ensure that the process is fluid and that everyone is on the same page, resulting in well-built products.</p>
+<p>Work permit: I&#39;m Brazilian and currently residing in Rio de Janeiro. I&#39;m in the process of acquiring Spanish citizenship, which will be completed by the end of 2024.</p>
+<h2 id="recent-projects">Recent projects</h2>
+<p>Get to know some of the recent projects in which I had a relevant role.</p>
+<h3 id="payment-of-outstanding-fees">Payment of outstanding fees</h3>
+<p>Streamlining the process for students to pay outstanding tuition fees before re-enrolling for the next term.
+<a href="project-1.html">View Project</a></p>
+<h2 id="more-about-me">More about me</h2>
+<p>Sports, meditation, and tea are my daily rituals, fueling my creativity to craft exceptional user experiences. And to complete the checklist of a hipster designer, I&#39;m also a vegetarian.</p>
+<p>In 2007, I started participating in <strong>signature tournaments on forums</strong>. Shortly after starting college for design, I began working in digital marketing agencies, then in a consultancy where I engaged in various projects, including a major project for the Brazilian Federation of Banks. I&#39;ve actively contributed to crafting engaging websites and apps. Proficient in design and interactive prototyping, I&#39;ve led two app projects, focusing on Material Design principles and web interface standards.</p>
+<p>In recent years, I&#39;ve <strong>expanded my skill set</strong> to include <strong>moderating interviews, crafting user journeys, and navigating various product frameworks</strong>. My strong interpersonal skills enable me to cultivate close relationships within my team and remain readily available to provide support.</p>
+<h2 id="designer-who-codes">Designer who codes</h2>
+<p>What sets me apart is my genuine <strong>curiosity about the inner workings of interfaces</strong> and my commitment to delivering exceptional user experiences.</p>
+<p>In my previous role, I focused on building the front-end, handing it over to the developers to work on the back end. This, along with starting my career as an art director, has given me a strong UI skill set today.</p>
+<p>One of the directors there, who was also a <strong>developer and visually impaired, taught me many things about accessibility</strong>. From best practices to using screen readers alongside him, it was an incredible learning experience for me.</p>
+<h2 id="you-can-find-me-over-here">You can find me over here</h2>
+<ul>
+<li><a href="https://www.linkedin.com/in/garciatadeu/">LinkedIn</a></li>
+<li><a href="mailto:tadeugarcia.92@gmail.com">Mail</a></li>
+<li><a href="tel:5521979976655">Phone</a></li>
+</ul>
+
+		</body>
