--- a/head.html
+++ b/head.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
-    <title>Tadeu Garcia</title>
-    <link rel="icon" href="">
-    <link rel="stylesheet" href="assets/images/favicon.webp">
+    <title>Tadeu Garcia - Product Designer</title>
+    <link rel="icon" href="assets/images/favicon.webp">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DZME29N4PV"></script>
