--- a/index.html
+++ b/index.html
@@ -5,22 +5,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
-    <title>Tadeu Garcia</title>
+    <title>Tadeu Garcia - Senior Product Designer</title>
     <link rel="icon" href="assets/images/favicon.webp">
     <link rel="stylesheet" href="assets/css/style.css">
-	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DZME29N4PV"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){window.dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-DZME29N4PV');
+    </script>
 </head>
-		<body>
-			<div id="markdown-content"></div>
+<body>
+	<main id="content"></main>
+	
+	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.6/purify.min.js"></script>
 
-<script>
-fetch('index.md')
-  .then(response => response.text())
-  .then(markdown => {
-    const htmlContent = marked(markdown);
-    document.getElementById('markdown-content').innerHTML = htmlContent;
-  });
-</script>
-
-		</body>
-		</html>
+	<script>
+		// loadMarkdown
+		document.addEventListener("DOMContentLoaded", function() {
+			fetch('content/index.md')
+			.then(response => response.text())
+			.then(text => {
+				const dirtyHTML = marked.parse(text);
+				const cleanHTML = DOMPurify.sanitize(dirtyHTML);
+				document.getElementById('content').innerHTML = cleanHTML;
+			})
+			.catch(error => console.error('Error loading the markdown file:', error));
+		});
+		
+		// loadHTML
+		function loadHTML(selector, url) {
+			fetch(url)
+			.then(response => response.text())
+			.then(html => {
+				document.querySelector(selector).innerHTML = html;
+			})
+			.catch(error => console.error('Error loading HTML:', error));
+        }
+        loadHTML('#header', 'partials/header.html');
+	</script>	  
+</body>
+</html>
