--- a/project-1.html
+++ b/project-1.html
@@ -24,7 +24,7 @@
 	<iframe class="figma" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F7Ee8CpxJHmFumaoxqXxBKa%2FPUC-Rio%3Fnode-id%3D21-4%26t%3DTi5xC4c0zlfEtZSQ-1%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D21%253A4" allowfullscreen></iframe>	
 	
 	<div class="project-end">
-		<a href="project-2.html">⇽ Back to home</a>
+		<a href="index.html">⇽ All work</a>
 		<a href="project-2.html">Next project ⇾</a>
 	</div>
 
