Troca de icones de fonte para o material e melhorias no conteúdo.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
 </head>
 <body>
 	<main id="content"></main>
+
+	<div class="social">
+		<a href="https://www.linkedin.com/in/garciatadeu/" target="_blank">
+			<span class="material-symbols-outlined">arrow_outward</span> LinkedIn
+		</a>
+		<a href="https://www.linkedin.com/in/garciatadeu/" target="_blank">
+			<span class="material-symbols-outlined">cloud_download</span> Resume
+		</a>
+		<a href="https://www.linkedin.com/in/garciatadeu/" target="_blank">
+			<span class="material-symbols-outlined">mail</span> Mail
+		</a>
+		<a href="https://www.linkedin.com/in/garciatadeu/" target="_blank">
+			<span class="material-symbols-outlined">phone</span> Phone
+		</a>
+	</div>
 	
 	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.6/purify.min.js"></script>
