--- a/project-1.html
+++ b/project-1.html
@@ -20,13 +20,20 @@
     </script>
 </head>
 <body>
-	<main id="content"></main>
-	<iframe class="figma" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F7Ee8CpxJHmFumaoxqXxBKa%2FPUC-Rio%3Fnode-id%3D21-4%26t%3DTi5xC4c0zlfEtZSQ-1%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D21%253A4" allowfullscreen></iframe>	
-	
-	<div class="project-end">
-		<a href="index.html">⇽ All work</a>
-		<a href="project-2.html">Next project ⇾</a>
+	<div class="project-nav-start">
+		<a href="index.html">
+			<span class="material-symbols-outlined">arrow_left_alt</span> All work
+		</a>
 	</div>
+
+	<main id="content"></main>
+
+	<iframe class="figma" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F7Ee8CpxJHmFumaoxqXxBKa%2FPUC-Rio%3Fnode-id%3D21-4%26t%3DTi5xC4c0zlfEtZSQ-1%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D21%253A4" allowfullscreen></iframe>	
+
+	<h2>Thank you for your time</h2>
+	<p>
+		Let's move on to the <a href="project-2.html">next project <span class="material-symbols-outlined">arrow_right_alt</span></a>
+	</p>
 
 	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.6/purify.min.js"></script>
