--- a/index.html
+++ b/index.html
@@ -26,16 +26,18 @@
 		<a href="https://www.linkedin.com/in/garciatadeu/" target="_blank">
 			<span class="material-symbols-outlined">arrow_outward</span> LinkedIn
 		</a>
-		<a href="https://www.linkedin.com/in/garciatadeu/" target="_blank">
+		<a href="assets/Tadeu Garcia.pdf" download>
 			<span class="material-symbols-outlined">cloud_download</span> Resume
 		</a>
-		<a href="https://www.linkedin.com/in/garciatadeu/" target="_blank">
+		<a href="mailto:tadeugarcia.92@gmail.com">
 			<span class="material-symbols-outlined">mail</span> Mail
 		</a>
-		<a href="https://www.linkedin.com/in/garciatadeu/" target="_blank">
+		<a href="tel:+5521979976655">
 			<span class="material-symbols-outlined">phone</span> Phone
 		</a>
 	</div>
+	
+	<img class="avatar" src="/assets/images/avatar.png" alt="Cartoon avatar of a man wearing glasses working on a laptop">
 	
 	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.6/purify.min.js"></script>
