--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Tadeu Garcia - Senior Product Designer</title>
     <link rel="icon" href="assets/images/favicon.webp">
     <link rel="stylesheet" href="assets/css/style.css">
+	<!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Tadeu Garcia">
+    <meta property="og:description" content="Senior Product Designer">
+    <meta property="og:image" content="assets/images/share.webp">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Tadeu Garcia">
+    <meta name="twitter:description" content="Senior Product Designer">
+    <meta name="twitter:image" content="assets/images/share.webp">
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DZME29N4PV"></script>
