inclusão de outros metadatados

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
     <title>Tadeu Garcia - Senior Product Designer</title>
+	<meta name="description" content="Senior Product Designer">
     <link rel="icon" href="assets/images/favicon.webp">
     <link rel="stylesheet" href="assets/css/style.css">
 	<!-- Open Graph / Facebook -->
@@ -13,6 +14,7 @@
     <meta property="og:title" content="Tadeu Garcia">
     <meta property="og:description" content="Senior Product Designer">
     <meta property="og:image" content="assets/images/share.webp">
+	<meta property="og:url" content="https://tadeugarcia.com/">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Tadeu Garcia">
