Alteração na imagem de compartilhamento

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Tadeu Garcia">
     <meta property="og:description" content="Senior Product Designer">
-    <meta property="og:image" content="assets/images/share.webp">
+    <meta property="og:image" content="assets/images/social.png">
 	<meta property="og:url" content="https://tadeugarcia.com/">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Tadeu Garcia">
     <meta name="twitter:description" content="Senior Product Designer">
-    <meta name="twitter:image" content="assets/images/share.webp">
+    <meta name="twitter:image" content="assets/images/social.png">
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DZME29N4PV"></script>
