Adição do conteúdo do primeiro case

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
     </script>
 </head>
 <body>
+	<style>		
+		h2 {    
+			margin-top: 200px;
+		}
+	</style>
 	<main id="content"></main>
 
 	<div class="social">
