Conteúdo do case 2.

--- a/case-3.html
+++ b/case-3.html
@@ -32,7 +32,7 @@
 
 	<h2>Thank you for your time</h2>
 	<p>
-		Let's return to view  <a href="case-2.html">all work <span class="material-symbols-outlined">arrow_right_alt</span></a>
+		Let's return to view  <a href="index.html">all work <span class="material-symbols-outlined">arrow_right_alt</span></a>
 	</p>
 
 	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
@@ -41,7 +41,7 @@
 	<script>
 		// loadMarkdown
 		document.addEventListener("DOMContentLoaded", function() {
-			fetch('case-1.md')
+			fetch('case-3.md')
 			.then(response => response.text())
 			.then(text => {
 				const dirtyHTML = marked.parse(text);
