--- a/case-2.html
+++ b/case-2.html
@@ -28,11 +28,10 @@
 
 	<main id="content"></main>
 
-	<iframe class="figma" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F7Ee8CpxJHmFumaoxqXxBKa%2FPUC-Rio%3Fnode-id%3D21-4%26t%3DTi5xC4c0zlfEtZSQ-1%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D21%253A4" allowfullscreen></iframe>	
-
+	<iframe class="figma" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F5YQ94SSDFKHW5g3cE40mij%2FPortal-acad%25C3%25AAmico-%255Baluno%255D%3Fnode-id%3D9010-10019%26t%3Dr6vefOXcS1WDYv2v-1%26scaling%3Dscale-down%26page-id%3D8898%253A8370%26starting-point-node-id%3D9010%253A10019" allowfullscreen></iframe>
 	<h2>Thank you for your time</h2>
 	<p>
-		Let's move on to the <a href="case-3.html">next case <span class="material-symbols-outlined">arrow_right_alt</span></a>
+		Let's return to view  <a href="index.html">all work <span class="material-symbols-outlined">arrow_right_alt</span></a>
 	</p>
 
 	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
@@ -41,7 +40,7 @@
 	<script>
 		// loadMarkdown
 		document.addEventListener("DOMContentLoaded", function() {
-			fetch('case-1.md')
+			fetch('case-2.md')
 			.then(response => response.text())
 			.then(text => {
 				const dirtyHTML = marked.parse(text);
