--- a/case-1.html
+++ b/case-1.html
@@ -29,6 +29,13 @@
 		</a>
 	</div>
 
+	<div class="video-intro">
+		<video autoplay loop muted>
+			<source src="assets/images/case-1/video.mp4" type="video/mp4">
+			Your browser does not support the video tag.
+		</video>
+	</div>
+
 	<main id="content"></main>
 
 	<iframe class="figma" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F7Ee8CpxJHmFumaoxqXxBKa%2FPUC-Rio%3Fnode-id%3D21-4%26t%3DTi5xC4c0zlfEtZSQ-1%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D21%253A4" allowfullscreen></iframe>	
