--- a/case-2.html
+++ b/case-2.html
@@ -29,6 +29,13 @@
 		</a>
 	</div>
 
+	<div class="video-intro">
+		<video autoplay loop muted>
+			<source src="assets/images/case-2/video.mp4" type="video/mp4">
+			Your browser does not support the video tag.
+		</video>
+	</div>
+
 	<main id="content"></main>
 
 	<iframe class="figma" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F5YQ94SSDFKHW5g3cE40mij%2FPortal-acad%25C3%25AAmico-%255Baluno%255D%3Fnode-id%3D9010-10019%26t%3Dr6vefOXcS1WDYv2v-1%26scaling%3Dscale-down%26page-id%3D8898%253A8370%26starting-point-node-id%3D9010%253A10019" allowfullscreen></iframe>
