Alteração nos titles.

--- a/case-3.html
+++ b/case-3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
-    <title>Case 3</title>
+    <title>Tadeu Garcia - Case 3</title>
     <link rel="icon" href="assets/images/favicon.webp">
     <link rel="stylesheet" href="assets/css/style.css">
 
