atualizações no resume

--- a/case-1.html
+++ b/case-1.html
@@ -8,6 +8,10 @@
     <title>Tadeu Garcia - Case 1</title>
     <link rel="icon" href="assets/images/favicon.webp">
     <link rel="stylesheet" href="assets/css/style.css">
+	<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
