--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 	<meta name="description" content="Senior Product Designer">
     <link rel="icon" href="assets/images/favicon.webp">
     <link rel="stylesheet" href="assets/css/style.css">
+	<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 	<!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Tadeu Garcia">
@@ -20,6 +24,7 @@
     <meta name="twitter:title" content="Tadeu Garcia">
     <meta name="twitter:description" content="Senior Product Designer">
     <meta name="twitter:image" content="assets/images/social.png">
+	
 
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -46,7 +51,7 @@
 		<a href="https://www.linkedin.com/in/garciatadeu/" target="_blank">
 			<span class="material-symbols-outlined">arrow_outward</span> LinkedIn
 		</a>
-		<a href="assets/Tadeu Garcia.pdf" download>
+		<a href="assets/Tadeu_Garcia_Resume.pdf" download>
 			<span class="material-symbols-outlined">cloud_download</span> Resume
 		</a>
 		<a href="mailto:tadeugarcia.92@gmail.com">
