Remover figma embed

--- a/case-2.html
+++ b/case-2.html
@@ -37,12 +37,8 @@
 	</div>
 
 	<main id="content"></main>
-
-	<iframe class="figma" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F5YQ94SSDFKHW5g3cE40mij%2FPortal-acad%25C3%25AAmico-%255Baluno%255D%3Fnode-id%3D9010-10019%26t%3Dr6vefOXcS1WDYv2v-1%26scaling%3Dscale-down%26page-id%3D8898%253A8370%26starting-point-node-id%3D9010%253A10019" allowfullscreen></iframe>
 	<h2>Thank you for your time</h2>
-	<p>
-		Let's return to view  <a href="index.html">all work <span class="material-symbols-outlined">arrow_right_alt</span></a>
-	</p>
+	<p>Let's return to view  <a href="index.html">all work <span class="material-symbols-outlined">arrow_right_alt</span></a></p>
 
 	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.6/purify.min.js"></script>
