--- a/case-1.html
+++ b/case-1.html
@@ -41,13 +41,8 @@
 	</div>
 
 	<main id="content"></main>
-
-	<iframe class="figma" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F7Ee8CpxJHmFumaoxqXxBKa%2FPUC-Rio%3Fnode-id%3D21-4%26t%3DTi5xC4c0zlfEtZSQ-1%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D21%253A4" allowfullscreen></iframe>	
-
 	<h2>Thank you for your time</h2>
-	<p>
-		Let's move on to the <a href="case-2.html">next case <span class="material-symbols-outlined">arrow_right_alt</span></a>
-	</p>
+	<p>Let's move on to the <a href="case-2.html">next case <span class="material-symbols-outlined">arrow_right_alt</span></a></p>
 
 	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.6/purify.min.js"></script>
