--- a/case-1.html
+++ b/case-1.html
@@ -42,7 +42,7 @@
 
 	<main id="content"></main>
 	<h2>Thank you for your time</h2>
-	<p>Let's move on to the <a href="case-2.html">next case <span class="material-symbols-outlined">arrow_right_alt</span></a></p>
+	<p>Let's move on to the <a href="case-2">next case <span class="material-symbols-outlined">arrow_right_alt</span></a></p>
 
 	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.6/purify.min.js"></script>
