continuação remoção de extensão html

--- a/case-2.html
+++ b/case-2.html
@@ -24,7 +24,7 @@
 	<!-- End Google Tag Manager (noscript) -->
 	 
 	<div class="nav-start">
-		<a href="index.html">
+		<a href="index">
 			<span class="material-symbols-outlined">arrow_left_alt</span> All work
 		</a>
 	</div>
@@ -38,7 +38,7 @@
 
 	<main id="content"></main>
 	<h2>Thank you for your time</h2>
-	<p>Let's return to view  <a href="index.html">all work <span class="material-symbols-outlined">arrow_right_alt</span></a></p>
+	<p>Let's return to view  <a href="index">all work <span class="material-symbols-outlined">arrow_right_alt</span></a></p>
 
 	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.6/purify.min.js"></script>
