Continuação da remoção dos .htmls

--- a/case-1.html
+++ b/case-1.html
@@ -28,7 +28,7 @@
 	<!-- End Google Tag Manager (noscript) -->
 	 
 	<div class="nav-start">
-		<a href="index">
+		<a href="/">
 			<span class="material-symbols-outlined">arrow_left_alt</span> All work
 		</a>
 	</div>
