--- a/case-3.html
+++ b/case-3.html
@@ -24,14 +24,14 @@
 	<!-- End Google Tag Manager (noscript) -->
 	 
 	<div class="nav-start">
-		<a href="index">
+		<a href="/">
 			<span class="material-symbols-outlined">arrow_left_alt</span> All work
 		</a>
 	</div>
 
 	<main id="content"></main>
 	<h2>Thank you for your time</h2>
-	<p>Let's return to view  <a href="index">all work <span class="material-symbols-outlined">arrow_right_alt</span></a></p>
+	<p>Let's return to view  <a href="/">all work <span class="material-symbols-outlined">arrow_right_alt</span></a></p>
 
 	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.6/purify.min.js"></script>
