--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<a href="mailto:tadeugarcia.92@gmail.com">
 			<span class="material-symbols-outlined">mail</span> Mail
 		</a>
-		<a href="tel:+5521979976655">
+		<a href="tel:+55 21 97997 6655">
 			<span class="material-symbols-outlined">phone</span> Phone
 		</a>
 	</div>
