--- a/index.html
+++ b/index.html
@@ -45,25 +45,79 @@
 			margin-top: 200px;
 		}
 	</style>
-	<main id="content"></main>
+	
+	<p>Tadeu Garcia</p>
+	<h1>Senior Product Designer based in Rio de Janeiro</h1>
+	<p>
+		Experienced designer specializing in creating digital products for e-commerce, marketplaces, 
+		billing and payment systems, as well as back-office applications. Skilled in developing web components 
+		for desktop and mobile platforms, with expertise in Material Design for app interfaces.
+	</p>
+	<p>Brazilian, obtaining Spanish citizenship by end-2024.</p>
+
+	<h2>Case studies</h2>
+	<p>Relevant experience from recent years</p>
+
+	<a href="case-1" class="video-intro">
+		<video autoplay="" loop="" muted="">
+			<source src="assets/images/case-1/video.mp4" type="video/mp4">
+			Your browser does not support the video tag.
+		</video>
+	</a>
+
+	<h3>Premium Posgraduate Redesign</h3>
+	
+	<p>In this redesign, the navigation flow and the entire course purchase process were completely renewed.<br>
+	
+	<a href="case-1">View case</a></p>
+	
+	<hr>
+	
+	<a href="case-2" class="video-intro">
+		<video autoplay="" loop="" muted="">
+			<source src="assets/images/case-2/video.mp4" type="video/mp4">
+			Your browser does not support the video tag.
+		</video>
+	</a>
+	
+	<h3>Payment of outstanding fees</h3>
+	
+	<p>Streamlining the process for students to pay outstanding tuition fees before re-enrolling for&nbsp;the&nbsp;next&nbsp;term.<br>
+	
+	<a href="case-2">View case</a>
+	<h2>More about me </h2>
+	
+	<ul>
+		<li>Started designing in 2007 with an online forum signature contest.</li>
+		<li>AI enthusiast, I utilize Artificial Intelligence daily to assist me with work and personal tasks.</li>
+		<li>To proceed with the hipster designer checklist, I'm vegetarian.</li>
+		<li>My current hobbies are swimming, yoga, and meditation.</li>
+	</ul>
+
+	<h2>Acessibility and code </h2>
+	
+	<p>What sets me apart is a long-standing interest in understanding the background workings of interfaces.</p>
+	<p>In my previous role, one of the directors there, who was also a developer and a blind person, taught me 
+	so much about <strong>accessibility: from best practices to using screen readers</strong>, it was an 
+	incredible learning with him.</p>
+	
+	<h2>You can find me over here </h2>
 
 	<div class="social">
 		<a href="https://www.linkedin.com/in/garciatadeu/" target="_blank">
 			<span class="material-symbols-outlined">arrow_outward</span> LinkedIn
 		</a>
-		<a href="assets/Tadeu_Garcia_Resume.pdf" download>
-			<span class="material-symbols-outlined">cloud_download</span> Resume
+		<a href="assets/resume/Tadeu_Garcia_Resume.pdf" target="_blank">
+			<span class="material-symbols-outlined">description</span> Resume
 		</a>
 		<a href="mailto:tadeugarcia.92@gmail.com">
-			<span class="material-symbols-outlined">mail</span> Mail
+			<span class="material-symbols-outlined">mail</span> tadeugarcia.92@gmail.com
 		</a>
 		<a href="tel:+55 21 97997 6655">
-			<span class="material-symbols-outlined">phone</span> Phone
+			<span class="material-symbols-outlined">phone</span> +55 21 97997 6655
 		</a>
 	</div>
-	
-	<img class="avatar" src="/assets/images/avatar.png" alt="Cartoon avatar of a man wearing glasses working on a laptop">
-	
+		
 	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.6/purify.min.js"></script>
 
